--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<link rel="manifest" href="manifest_app.json" />
+<link rel="manifest" href="/dist/news/manifest_app.json" />
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="/dist/news/manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
