--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<link rel="manifest" href="/dist/news/manifest_app.json" />
 <html lang="en">
-<head>
+  <head>
+    
   <meta charset="utf-8">
   <title>News</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="/dist/news/manifest.webmanifest">
+  
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
+  <link rel="manifest" href="manifest_app.json" />
+  <link rel="manifest" href="/dist/news/manifest.webmanifest">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
